--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.fb14539e33099324c4b2.css"></head>
+<link rel="stylesheet" href="styles.5cbc1c58f8278dda0661.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.08e63943d0dbd50a8136.js"></script><script type="text/javascript" src="main.765a20c852e2edde9249.js"></script></body>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills-es5.c2296d8f02d28c1152c5.js" nomodule defer></script><script src="polyfills.5f082cdcf043252f52ff.js" defer></script><script src="main.29320da6bb80aae7c065.js" defer></script></body>
 </html>
