Update Angular version of frontend app

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>iEmu - IoT Device Emulator</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.5cbc1c58f8278dda0661.css"></head>
+<style>@charset "UTF-8";body,html{margin:0;padding:0;}html{box-sizing:border-box;}*,:after,:before{box-sizing:inherit;}html{background-color:#fff;font-size:16px;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;min-width:300px;overflow-x:hidden;overflow-y:scroll;text-rendering:optimizeLegibility;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;text-size-adjust:100%;}body{font-family:BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,Arial,sans-serif;}body{color:#4a4a4a;font-size:1em;font-weight:400;line-height:1.5;}body,html{font-family:sans-serif,serif;font-size:16px;line-height:1.5;height:100%;background:#ecf0f3;}</style><link rel="stylesheet" href="styles.50bac890bbf9da9af008.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.50bac890bbf9da9af008.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills-es5.c2296d8f02d28c1152c5.js" nomodule defer></script><script src="polyfills.5f082cdcf043252f52ff.js" defer></script><script src="main.c7f13cb4bfdc2432a0d4.js" defer></script></body>
-</html>
+<script src="runtime.4f68a5e300237761a3d1.js" defer></script><script src="polyfills-es5.3c9e614b96c79a163775.js" nomodule defer></script><script src="polyfills.a9e2af0a740010a80f71.js" defer></script><script src="main.6e1affd542afa3d928e4.js" defer></script>
+
+</body></html>
